--- a/main.hbs
+++ b/main.hbs
@@ -12,6 +12,44 @@
     </style>
   </head>
   <body>
+    <script>
+    const storageKey = "theme-preference";
+    const onClick = () => {
+      theme.value = theme.value === "light" ? "dark" : "light";
+      setPreference();
+    };
+    const getColorPreference = () => {
+      if (localStorage.getItem(storageKey)) return localStorage.getItem(storageKey);
+      else
+        return window.matchMedia("(prefers-color-scheme: dark)").matches
+          ? "dark"
+          : "light";
+    };
+    const setPreference = () => {
+      localStorage.setItem(storageKey, theme.value);
+      reflectPreference();
+    };
+    const reflectPreference = () => {
+      document.firstElementChild.setAttribute("data-theme", theme.value);
+      document
+        .querySelector("#theme-toggle")
+        ?.setAttribute("aria-label", theme.value);
+    };
+    const theme = {
+      value: getColorPreference(),
+    };
+    reflectPreference();
+    window.onload = () => {
+      reflectPreference();
+      document.querySelector("#theme-toggle").addEventListener("click", onClick);
+    };
+    window
+      .matchMedia("(prefers-color-scheme: dark)")
+      .addEventListener("change", ({ matches: isDark }) => {
+        theme.value = isDark ? "dark" : "light";
+        setPreference();
+      });
+    </script>
     <main id="resume">
       {{> basics }}
       <article id="main">
@@ -30,16 +68,19 @@
       </article>
     </main>
     <footer>
-      {{#resume.basics}}
-        {{#if profiles.length}}
-          <div class="profiles">
-            {{#each profiles}}
-              <a href="{{url}}">{{network}}</a>
-            {{/each}}
-          </div>
-        {{/if}}
-      {{/resume.basics}}
-      <p id="copyright">
+      <div class="controls">
+        <a
+          class="theme-toggle"
+          id="theme-toggle"
+          aria-label="auto"
+          aria-live="polite"
+        >Switch theme</a>
+        {{#if (ne resume.displayMode "export")}}<a
+            href=""
+            onclick="window.print();return false;"
+          >Export to PDF</a>{{else}}{{/if}}
+      </div>
+      <p>
         Powered by
         <a href="https://github.com/jsonresume/resume-cli">resume-cli</a>
       </p>
